tests/dataset/tpc-ds/compiler/c/q4.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:35Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:35Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *customer_id;
  const char *customer_first_name;
  const char *customer_last_name;
  const char *customer_login;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_customer_id;
  const char *c_first_name;
  const char *c_last_name;
  const char *c_login;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int ss_sold_date_sk;
  double ss_ext_list_price;
  double ss_ext_wholesale_cost;
  double ss_ext_discount_amt;
  double ss_ext_sales_price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_bill_customer_sk;
  int cs_sold_date_sk;
  double cs_ext_list_price;
  double cs_ext_wholesale_cost;
  double cs_ext_discount_amt;
  double cs_ext_sales_price;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_bill_customer_sk;
  int ws_sold_date_sk;
  double ws_ext_list_price;
  double ws_ext_wholesale_cost;
  double ws_ext_discount_amt;
  double ws_ext_sales_price;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_id;
  int customer_first_name;
  int customer_last_name;
  int customer_login;
  int dyear;
  double year_total;
  const char *sale_type;
} c_item_t;
typedef struct {
  int len;
  c_item_t *data;
} c_item_list_t;
c_item_list_t create_c_item_list(int len) {
  c_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(c_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_id;
  int customer_first_name;
  int customer_last_name;
  int customer_login;
  int dyear;
  double year_total;
  const char *sale_type;
} c_item1_t;
typedef struct {
  int len;
  c_item1_t *data;
} c_item1_list_t;
c_item1_list_t create_c_item1_list(int len) {
  c_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(c_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_id;
  int customer_first_name;
  int customer_last_name;
  int customer_login;
  int dyear;
  double year_total;
  const char *sale_type;
} c_item2_t;
typedef struct {
  int len;
  c_item2_t *data;
} c_item2_list_t;
c_item2_list_t create_c_item2_list(int len) {
  c_item2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(c_item2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int customer_id;
  int customer_first_name;
  int customer_last_name;
  int customer_login;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q4_result_result;
static void test_TPCDS_Q4_result() {
  tmp1_t tmp1[] = {(tmp1_t){.customer_id = "C1",
                            .customer_first_name = "Alice",
                            .customer_last_name = "A",
                            .customer_login = "alice"}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q4_result_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q4_result_result.len; i3++) {
      if (test_TPCDS_Q4_result_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_customer_id = "C1",
                                        .c_first_name = "Alice",
                                        .c_last_name = "A",
                                        .c_login = "alice"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_customer_sk = 1,
                                               .ss_sold_date_sk = 1,
                                               .ss_ext_list_price = 10.0,
                                               .ss_ext_wholesale_cost = 5.0,
                                               .ss_ext_discount_amt = 0.0,
                                               .ss_ext_sales_price = 10.0},
                                (store_sale_t){.ss_customer_sk = 1,
                                               .ss_sold_date_sk = 2,
                                               .ss_ext_list_price = 20.0,
                                               .ss_ext_wholesale_cost = 5.0,
                                               .ss_ext_discount_amt = 0.0,
                                               .ss_ext_sales_price = 20.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.cs_bill_customer_sk = 1,
                       .cs_sold_date_sk = 1,
                       .cs_ext_list_price = 10.0,
                       .cs_ext_wholesale_cost = 2.0,
                       .cs_ext_discount_amt = 0.0,
                       .cs_ext_sales_price = 10.0},
      (catalog_sale_t){.cs_bill_customer_sk = 1,
                       .cs_sold_date_sk = 2,
                       .cs_ext_list_price = 30.0,
                       .cs_ext_wholesale_cost = 2.0,
                       .cs_ext_discount_amt = 0.0,
                       .cs_ext_sales_price = 30.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_bill_customer_sk = 1,
                                         .ws_sold_date_sk = 1,
                                         .ws_ext_list_price = 10.0,
                                         .ws_ext_wholesale_cost = 5.0,
                                         .ws_ext_discount_amt = 0.0,
                                         .ws_ext_sales_price = 10.0},
                            (web_sale_t){.ws_bill_customer_sk = 1,
                                         .ws_sold_date_sk = 2,
                                         .ws_ext_list_price = 12.0,
                                         .ws_ext_wholesale_cost = 5.0,
                                         .ws_ext_discount_amt = 0.0,
                                         .ws_ext_sales_price = 12.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 2001},
                           (date_dim_t){.d_date_sk = 2, .d_year = 2002}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  int year_total = ((c_item_list_t){0, NULL}) union(
      (c_item1_list_t){0, NULL}) union((c_item2_list_t){0, NULL});
  result_item_list_t result = 0;
  printf("[");
  for (int i4 = 0; i4 < result.len; i4++) {
    if (i4 > 0)
      printf(",");
    result_item_t it = result.data[i4];
    printf("{");
    _json_string("customer_id");
    printf(":");
    _json_int(it.customer_id);
    printf(",");
    _json_string("customer_first_name");
    printf(":");
    _json_int(it.customer_first_name);
    printf(",");
    _json_string("customer_last_name");
    printf(":");
    _json_int(it.customer_last_name);
    printf(",");
    _json_string("customer_login");
    printf(":");
    _json_int(it.customer_login);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q4_result_result = result;
  test_TPCDS_Q4_result();
  return 0;
}
